Add responsive css & js

--- a/src/app/pages/subjects/category-section/book/book.hbs
+++ b/src/app/pages/subjects/category-section/book/book.hbs
@@ -1,5 +1,5 @@
 <img src="{{coverUrl}}" alt="book cover" />
-<div class="tooltip">
+<div class="details">
     <div class="get-this-title-container"></div>
     <div class="cta">
         <a href="/details?{{slug}}" class="btn">details and resources</a>
