--- a/src/app/pages/subjects/category-section/category-section.hbs
+++ b/src/app/pages/subjects/category-section/category-section.hbs
@@ -1,2 +1,2 @@
-<div class="subject">{{categoryName}}</div>
-<div class="row-of-covers"></div>
+<h4 class="subject">{{categoryName}}</h4>
+<div class="row"></div>
