--- a/src/app/pages/adoption/adoption.scss
+++ b/src/app/pages/adoption/adoption.scss
@@ -2,7 +2,7 @@
 
 $text-secondary: rgba(color(neutral-darkest), 0.7);
 
-.adoption-form {
+.form {
     font-size: 1.5rem;
     font-weight: 400;
 
@@ -44,4 +44,5 @@ $text-secondary: rgba(color(neutral-darkest), 0.7);
         margin: 1rem 0;
         width: 15rem;
     }
+
 }
