Put all filter button styling in filter-buttons.scss
Make Allies and Subjects page use the same filter button structure and
share the CSS

--- a/src/app/pages/allies/allies.hbs
+++ b/src/app/pages/allies/allies.hbs
@@ -9,7 +9,7 @@
         and make high­quality learning materials affordable and accessible.
     </p>
 </div>
-<div class="button-row">
+<div class="filter">
     <div class="filter-buttons"></div>
 </div>
 {{{strips}}}
